# QueryForge

./: .env.example  .gitignore  API.md  DEPLOYMENT.md  Dockerfile  PRODUCTION_READY.md  README.md  SETUP.md  docker-compose.yml  next.config.production.js  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
app/: globals.css  page.tsx
backend/: __init__.py  config.py  database.py  error_handlers.py  health.py  llm.py  main.py  models.py  test_main.py
components/: chat-interface.tsx  data-source-selector.tsx  error-alert.tsx  error-boundary.tsx  file-upload-panel.tsx  gemini-settings.tsx  manual-table-builder.tsx  query-results.tsx  schema-viewer.tsx
hooks/: use-query-forge.ts
lib/: config.ts  gemini-settings.ts  validation.ts
