[project]
name = "queryforge-backend"
version = "0.1.0"
description = "QueryForge - Natural Language to SQL Query Builder"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "python-multipart==0.0.6",
  "sqlalchemy==2.0.23",
  "pandas==2.1.3",
  "python-dotenv==1.0.0",
  "google-genai>=1.0.0",
  "slowapi==0.1.9",
  "pydantic==2.5.0",
  "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "black==23.12.0",
  "flake8==6.1.0",
  "mypy==1.7.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
